--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -16,6 +16,7 @@
       <tr>
         <td><%= category.title %></td>
         <td><%= category.description %></td>
+        <td><%= link_to 'Show', category %></td>
       </tr>
     <% end %>
   </tbody>
