--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @category.title %><h1>
 <p><%= @category.description %></p>
 
-<%= link_to 'edit', edit_category_path %> |
-<%= link_to 'back', categories_path %>
+<%= link_to 'Edit', edit_category_path %> |
+<%= link_to 'Back', categories_path %>
