--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,4 +2,7 @@
 <p><%= @category.description %></p>
 
 <%= link_to 'Edit', edit_category_path %> |
+<%= link_to 'Delete', category_path(@category.id),
+                      method: :delete,
+                      data: { confirm: "Are you sure you want to delete #{@category.title}?" } %> |
 <%= link_to 'Back', categories_path %>
