--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,9 +12,8 @@
   <tbody>
     <% @categories.each do |category| %>
       <tr>
-        <td><%= category.title %></td>
+        <td><%= link_to "#{category.title}", category %></td>
         <td><%= category.description %></td>
-        <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Delete', category_path(category.id),
                       method: :delete,
