--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -16,6 +16,15 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :due_at %><br />
+    <%= f.datetime_field :due_at, placeholder: 'Pick a Date', data: {
+      controller: "flatpickr",
+      flatpickr_alt_format: t("date.formats.long"),
+      flatpickr_date_format: "%b %d, %Y",
+      flatpickr_min_date: Time.zone.now
+    } %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
