--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,5 +6,9 @@
   <b>Description:</b>
   <%= @task.description %>
 </p>
+<p>
+  <b>Due Date:</b>
+  <%= @task.due_at.strftime("%b %d, %Y") %>
+</p>
 <%= link_to 'Edit', edit_category_task_path(@task.category, @task) %> |
 <%= link_to 'Back', category_path(@category.id) %>
