Fixes rooutes and index action in tasks controller

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -20,5 +20,5 @@
   <% end %>
 </table>
 <br />
-<%= link_to 'New Task', new_category_task_path(params[:category_id]) %>
-<%= link_to 'Back', category_path(@category.id) %>
+<%#= link_to 'New Task', new_category_task_path(params[:category_id]) %>
+<%#= link_to 'Back', category_path(@category.id) %>
