--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,6 +17,11 @@
     <%= form.text_area :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.number_field :user_id, id: :category_user_id, value: current_user.id, type: :visible %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
