--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -19,11 +19,14 @@ a, button, select {
 .bg-primary {
     background: $primary-color !important;
 }
-.text-color {
-    color: $text-color;
+.text-primary {
+    color: $primary-color !important;
 }
 .text-dark {
     color: $text-color-dark !important;
+}
+.text-warning {
+    color: $warning-color !important;
 }
 p {
     font-family: $secondary-font;
