--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,20 +1,19 @@
 <h1>Categories</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
-
   <tbody>
     <% @categories.each do |category| %>
       <% if category.user == current_user %>
         <tr>
-          <td><%= link_to "#{category.title}", category %></td>
+          <td><%= category.title %></td>
           <td><%= category.description %></td>
+          <td><%= link_to "Show", category %></td>
           <td><%= link_to "Edit", edit_category_path(category) %></td>
           <td><%= link_to "Delete", category_path(category.id),
                           method: :delete,
@@ -24,7 +23,5 @@
     <% end %>
   </tbody>
 </table>
-
 <br>
-
 <%= link_to "New Category", new_category_path %>
