--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,68 +1,78 @@
-<div class="col-lg-6">
-  <h2>TODAY<span class="lead"> <%= Date.today.strftime("%a, %B %d") %></span></h2>
-  <% @tasks.each do |task| %>
-    <% if task.due_at.strftime("%b %d") == DateTime.now.strftime("%b %d") %>
-      <div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <div class="card-title d-flex flex-wrap justify-content-between">
-            <div class="d-flex align-items-center">
-              <h3 class="card-title"><%= task.name %></h3>
-              <span class="badge bg-secondary"> <%= task.category.title %></span>
-            </div>
-            <div>
-              <%= link_to 'Edit', edit_category_task_path(task.category, task), class: "btn btn-secondary" %>
-              <%= link_to 'Delete', [task.category, task], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
-            </div>
-          </div>
-          <p> <%= task.description %></p>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
-</div>
-<hr>
-<div class="col-lg-6">
-  <% @tasks.each do |task| %>
-    <% if task.due_at.strftime("%b %d") != DateTime.now.strftime("%b %d") %>
-      <div class="card">
-        <div class="card-body">
-          <div class="card-title d-flex justify-content-between">
-            <h3 class="card-title"><%= task.name %> <span><%= task.due_at.strftime("%b %d") %></span> </h3>
-            <div>
-              <%= link_to 'Edit', edit_category_task_path(task.category, task), class: "btn btn-secondary" %>
-              <%= link_to 'Delete', [task.category, task], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
-            </div>
-          </div>
-          <p> <%= task.description %></p>
-        </div>
-      </div>
-    <% end %>
-  <% end %>
-</div>
-<h1>Tasks</h1>
-<table>
+<h2 class="text-danger">OVERDUE</h2>
+<table class="table">
   <tr>
+    <th>Category</th>
     <th>Name</th>
     <th>Description</th>
     <th>Due Date</th>
-    <th></th>
-    <th></th>
+    <th colspan="3">Actions</th>
   </tr>
-  <% @tasks.each do |task| %>
-    <% if task.user == current_user %>
+  <% @tasks.order(due_at: :asc).each do |task| %>
+    <% if task.user == current_user && task.due_at.to_date < DateTime.current.to_date %>
       <tr>
+        <td><span class="badge bg-success"><%= task.category.title %></span></td>
         <td><%= task.name %></td>
         <td><%= task.description %></td>
-        <td><%= task.due_at %></td>
+        <td><%= task.due_at.strftime("%b %d, %Y") %></td>
         <td><%= link_to "Show", [task.category, task] %></td>
         <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
-        <td><%= link_to "Destroy", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
+        <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
       </tr>
     <% end %>
   <% end %>
 </table>
-<br />
+<div>
+  <h2 class="text-primary">TODAY<span class="lead"> <%= Date.today.strftime("%a, %B %d") %></span></h2>
+  <% @tasks.order(due_at: :asc).each do |task| %>
+    <% if task.user == current_user %>
+      <% if task.due_at.to_date == DateTime.current.to_date %>
+        <table class="table">
+          <tr>
+            <th>Category</th>
+            <th>Name</th>
+            <th>Description</th>
+            <th colspan="3">Actions</th>
+          </tr>
+          <% if task.user == current_user %>
+            <tr>
+              <td><span class="badge bg-success"><%= task.category.title %></span></td>
+              <td><%= task.name %></td>
+              <td><%= task.description %></td>
+              <td><%= link_to "Show", [task.category, task] %></td>
+              <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
+              <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
+            </tr>
+          <% end %>
+        </table>
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
+<h2 class="text-warning">UPCOMING</h2>
+<br>
+<% if !@tasks.empty? %>
+  <table class="table">
+    <tr>
+      <th>Category</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Due Date</th>
+      <th colspan="3">Actions</th>
+    </tr>
+    <% @tasks.order(due_at: :asc).each do |task| %>
+      <% if task.user == current_user && task.due_at.to_date > DateTime.current.to_date%>
+        <tr>
+          <td><span class="badge bg-success"><%= task.category.title %></span></td>
+          <td><%= task.name %></td>
+          <td><%= task.description %></td>
+          <td><%= task.due_at.strftime("%b %d, %Y") %></td>
+          <td><%= link_to "Show", [task.category, task] %></td>
+          <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
+          <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
+        </tr>
+      <% end %>
+    <% end %>
+  </table>
+<% end %>
 <% #= link_to 'New Task', new_category_task_path(params[:category_id]) %>
 <% #= link_to 'Back', category_path(@category.id) %>
