--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,27 +1,24 @@
-<h1>Categories</h1>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @categories.each do |category| %>
-      <% if category.user == current_user %>
-        <tr>
-          <td><%= category.title %></td>
-          <td><%= category.description %></td>
-          <td><%= link_to "Show", category %></td>
-          <td><%= link_to "Edit", edit_category_path(category) %></td>
-          <td><%= link_to "Delete", category_path(category.id),
+<div class="d-flex justify-content-between align-items-center">
+  <h1>Categories</h1>
+  <%= link_to "New Category", new_category_path, class: 'btn btn-secondary' %>
+</div>
+<% @categories.each do |category| %>
+  <%= link_to category do %>
+    <div class="card my-2">
+      <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center flex-wrap">
+          <h2 class="fs-3"><%= category.title %></h2>
+          <div>
+            <%= link_to "Edit", edit_category_path(category), class: 'btn btn-warning' %>
+            <%= link_to "Delete", category_path(category.id),
+                          class: 'btn btn-danger',
                           method: :delete,
-                          data: { confirm: "Are you sure you want to delete #{category.title}?" } %></td>
-        </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
-<br>
-<%= link_to "New Category", new_category_path %>
+                          data: { confirm: "Are you sure you want to delete #{category.title}?" } %>
+          </div>
+        </div>
+        <p clas="text-muted"><%= category.description %></p>
+        <span>Tasks: <%= category.tasks.count %></span>
+      </div>
+    </div>
+  <% end %>
+<% end %>
