--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,5 +1,3 @@
 <h1>Edit Category</h1>
-
 <%= render 'form', category: @category %>
-
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', categories_path, class: 'btn btn-outline-dark mt-4' %>
