--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -8,29 +8,29 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-  </div>
-  <div class="field">
-    <%= f.label :due_at %><br />
-    <%= f.datetime_field :due_at, placeholder: "Pick a Date", data: {
+  <div class="d-flex">
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, class: 'form-control' %>
+    </div>
+    <div class="field mx-2">
+      <%= f.label :due_at %><br />
+      <%= f.datetime_field :due_at, class: 'form-control', placeholder: "Pick a Date", data: {
                                     controller: "flatpickr",
                                     flatpickr_alt_format: t("date.formats.long"),
                                     flatpickr_date_format: "%b %d, %Y",
                                     flatpickr_min_date: Time.zone.now,
                                   } %>
+    </div>
   </div>
-
+  <div class="field">
+    <%= f.label :description %><br />
+    <%= f.text_area :description, class: 'form-control' %>
+  </div>
   <div class="field">
     <%= f.number_field :user_id, id: :task_user_id, value: current_user.id, type: :hidden %>
   </div>
-  
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions mt-4">
+    <%= f.submit class: 'btn btn-secondary' %>
   </div>
 <% end %>
