Updates layout of categories and tasks index page

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,12 +2,12 @@
   <h1>Categories</h1>
   <%= link_to "New Category", new_category_path, class: 'btn btn-secondary' %>
 </div>
-<% @categories.each do |category| %>
-  <%= link_to category do %>
-    <div class="card my-2">
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-2 py-5 px-2">
+  <% @categories.each do |category| %>
+    <div class="card col m-1">
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center flex-wrap">
-          <h2 class="fs-3"><%= category.title %></h2>
+          <h2 class="fs-3"><%= link_to "#{category.title}", category %></h2>
           <div>
             <%= link_to "Edit", edit_category_path(category), class: 'btn btn-warning' %>
             <%= link_to "Delete", category_path(category.id),
@@ -21,4 +21,4 @@
       </div>
     </div>
   <% end %>
-<% end %>
+</div>
