--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,67 +1,22 @@
 <div id="overdue">
-  <h2 class="text-danger">OVERDUE</h2>
-  <table class="table">
-    <tr>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Due Date</th>
-      <th colspan="3">Actions</th>
-    </tr>
+  <% if !overdue(@tasks).empty? %>
+    <h2 class="text-danger">OVERDUE</h2>
     <% overdue(@tasks).each do |task| %>
-      <tr>
-        <td><span class="badge bg-success"><%= task.category.title %></span></td>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= task.due_at.strftime("%b %d, %Y") %></td>
-        <td><%= link_to "Show", [task.category, task] %></td>
-        <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
-        <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
+      <%= render 'task', task: task %>
     <% end %>
-  </table>
+  <% end %>
 </div>
-<div id="today">
+<div id="today" class="my-4">
   <h2 class="text-primary">TODAY<span class="lead"> <%= Date.today.strftime("%a, %B %d") %></span></h2>
-  <table class="table">
-    <tr>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-    <% today(@tasks).each do |task| %>
-      <tr>
-        <td><span class="badge bg-success"><%= task.category.title %></span></td>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= link_to "Show", [task.category, task] %></td>
-        <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
-        <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
-    <% end %>
-  </table>
+  <%= 'You have no tasks for today' unless !today(@tasks).empty? %>
+  <% today(@tasks).each do |task| %>
+    <%= render 'task', task: task %>
+  <% end %>
 </div>
 <div id="upcoming">
   <h2 class="text-warning">UPCOMING</h2>
-  <table class="table">
-    <tr>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Due Date</th>
-      <th colspan="3">Actions</th>
-    </tr>
-    <% upcoming(@tasks).each do |task| %>
-      <tr>
-        <td><span class="badge bg-success"><%= task.category.title %></span></td>
-        <td><%= task.name %></td>
-        <td><%= task.description %></td>
-        <td><%= format_date(task.due_at) %></td>
-        <td><%= link_to "Show", [task.category, task] %></td>
-        <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
-        <td><%= link_to "Delete", [task.category, task], method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
-    <% end %>
-  </table>
+  <%= 'You have no upcoming tasks' unless !upcoming(@tasks).empty? %>
+  <% upcoming(@tasks).each do |task| %>
+    <%= render 'task', task: task %>
+  <% end %>
 </div>
