--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,29 +1,43 @@
-<h1><%= @category.title %></h1>
-<p><%= @category.description %></p>
-<%= link_to 'Edit', edit_category_path %> |
-<%= link_to 'Delete', category_path(@category.id),
+<div class="d-flex flex-wrap justify-content-between align-items-center">
+  <%= link_to 'Back', categories_path, class: 'btn btn-outline-dark' %>
+  <div>
+    <%= link_to 'Edit', edit_category_path, class:'btn btn-warning' %>
+    <%= link_to 'Delete', category_path(@category.id),
+                      class: 'btn btn-danger',
                       method: :delete,
-                      data: { confirm: "Are you sure you want to delete #{@category.title}?" } %> |
-<%= link_to 'Back', categories_path %>
+                      data: { confirm: "Are you sure you want to delete #{@category.title}?" } %>
+  </div>
+</div>
+<div class="text-center">
+  <h1><%= @category.title %></h1>
+  <p><%= @category.description %></p>
+</div>
 <hr>
-<h1>New task</h1>
 <%= render 'tasks/form' %>
 <hr>
 <h1>Tasks</h1>
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Due Date</th>
-    <th></th>
-  </tr>
-  <% @category.tasks.each do |task| %>
-    <% if task.persisted? %> <%# to only display tasks saved in the database %>
-      <tr>
-        <td><%= link_to "#{task.name}", [task.category, task] %></td>
-        <td><%= task.description %></td>
-        <td><%= task.due_at.strftime("%b %d, %Y") %></td>
-      </tr>
+<table class="table table-striped mb-4">
+  <thead>
+    <tr class="table-header">
+      <th>Name</th>
+      <th>Description</th>
+      <th>Due Date</th>
+      <th colspan="2">Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @category.tasks.order(due_at: :asc).each do |task| %>
+      <% if task.persisted? %> <%# to only display tasks saved in the database %>
+        <tr>
+          <td><%= link_to "#{task.name}", [task.category, task] %></td>
+          <td><%= task.description %></td>
+          <td><%= task.due_at.strftime("%b %d, %Y") %></td>
+          <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
+          <td><%= link_to "Delete", category_task_path(task.category, task),
+            method: :delete,
+            data: { confirm: "Are you sure you want to delete #{task.name}?" } %></td>
+        </tr>
+      <% end %>
     <% end %>
-  <% end %>
+  </tbody>
 </table>
