--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,23 +1,33 @@
-<h2>Sign up</h2>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'mt-4 col-md-6 col-lg-4'}) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="field">
-    <%= f.label :email, class: 'form-label' %><br />
-    <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
+<section class='container-center'>
+  <div class="container-fluid row justify-content-center">
+    <div class="col-md-7 col-lg-5 bg-light shadow mt-4">
+      <div class="p-4 p-md-5">
+        <h3 class="text-center mb-4">Sign Up</h3>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field mt-2">
+            <%= f.label :email, class: 'form-label' %><br />
+            <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
+          </div>
+          <div class="field mt-2">
+            <%= f.label :password, class:"form-label" %>
+            <% if @minimum_password_length %>
+              <em class='text-muted'>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password",class: 'form-control' %>
+          </div>
+          <div class="field mt-2">
+            <%= f.label :password_confirmation, class:"form-label" %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
+          <div class="actions my-4 d-flex flex-column justify-content-center">
+            <%= f.submit "Sign up", class: 'btn btn-secondary' %>
+            <p class='align-self-center mt-2'>
+              Already have an account? <%= link_to "Log In", new_session_path(resource_name),  class: 'link-primary' %>
+            </p>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :password, class:"form-label" %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password",class: 'form-control' %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation, class:"form-label" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-  </div>
-  <div class="actions my-4">
-    <%= f.submit "Sign up", class: 'btn btn-secondary' %>
-  </div>
-<% end %>
-<%= render "devise/shared/links" %>
+</section>
