--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,19 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<section class='container-center'>
+  <div class="container-fluid row justify-content-center">
+    <div class="col-md-7 col-lg-5 bg-light shadow mt-4">
+      <div class="p-4 p-md-5">
+        <h3 class="text-center mb-4">Forgot your password?</h3>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="field">
+            <%= f.label :email, class: 'form-label' %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class:'form-control' %>
+          </div>
+          <div class="actions my-4 d-flex flex-column justify-content-center">
+            <%= f.submit "Send me reset password instructions", class: 'btn btn-secondary' %>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
