--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
   <div class="container-fluid">
     <%= link_to "JOURNAL", root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,11 +26,11 @@
             </div>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: 'btn btn-primary mx-2' %>
+          <li class="nav-item my-2">
+            <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary mx-2' %>
           </li>
-          <li class="nav-item">
-            <%= link_to "Signup", new_user_registration_path, class: 'btn btn-outline-light' %>
+          <li class="nav-item my-2">
+            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-outline-light' %>
           </li>
         <% end %>
       </ul>
