--- a/app/views/layouts/_notices.html.erb
+++ b/app/views/layouts/_notices.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-warning alert-dismissible fade show mt-2" role="alert">
+<div class="notices alert alert-warning alert-dismissible fade show mx-2" role="alert">
   <%= notice  %>
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
