--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit Category</h1>
-<%= render 'form', category: @category %>
-<%= link_to 'Back', categories_path, class: 'btn btn-outline-dark mt-4' %>
+<div class='container-center'>
+  <%= render 'form', category: @category %>
+</div>
+<%= link_to 'Back', categories_path, class: 'back-btn btn btn-outline-dark mt-4' %>
