--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,24 +1,29 @@
-<div class="d-flex justify-content-between align-items-center">
-  <h1>Categories</h1>
-  <%= link_to "New Category", new_category_path, class: 'btn btn-secondary' %>
-</div>
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-2 py-5 px-2">
-  <% @categories.each do |category| %>
-    <div class="card col m-1">
-      <div class="card-body">
-        <div class="d-flex justify-content-between align-items-center flex-wrap">
-          <h2 class="fs-3"><%= link_to "#{category.title}", category %></h2>
-          <div>
-            <%= link_to "Edit", edit_category_path(category), class: 'btn btn-warning' %>
-            <%= link_to "Delete", category_path(category.id),
-                          class: 'btn btn-danger',
+<section class='main-section'>
+  <div class="d-flex justify-content-between align-items-center container">
+    <h1 class="fs-4">List of Categories</h1>
+    <button class= 'btn btn-secondary'>
+      <i class="fas fa-plus"></i>
+      <%= link_to "New Category", new_category_path, class: 'text-white' %>
+    </button>
+  </div>
+  <div class="row my-2 g-2 container-fluid">
+    <% @categories.each do |category| %>
+      <div class="card col-md-6 col-lg-4">
+        <div class="card-body">
+          <div class="d-flex justify-content-between align-items-center flex-wrap">
+            <h2 class="fs-5"><%= link_to "#{category.title.humanize}", category %></h2>
+            <div>
+              <%= link_to "", edit_category_path(category), class: 'text-warning far fa-edit' %> |
+              <%= link_to "", category_path(category.id),
+                          class: 'text-danger far fa-trash-alt',
                           method: :delete,
                           data: { confirm: "Are you sure you want to delete #{category.title}?" } %>
+            </div>
           </div>
+          <p class="text-muted"><%= category.description.humanize %></p>
+          <span>Tasks: <%= category.tasks.count %></span>
         </div>
-        <p clas="text-muted"><%= category.description %></p>
-        <span>Tasks: <%= category.tasks.count %></span>
       </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+</section>
