--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,43 +1,45 @@
-<div class="d-flex flex-wrap justify-content-between align-items-center">
-  <%= link_to 'Back', categories_path, class: 'btn btn-outline-dark' %>
-  <div>
-    <%= link_to 'Edit', edit_category_path, class:'btn btn-warning' %>
-    <%= link_to 'Delete', category_path(@category.id),
-                      class: 'btn btn-danger',
-                      method: :delete,
-                      data: { confirm: "Are you sure you want to delete #{@category.title}?" } %>
+<section class='main-section'>
+  <%= link_to 'Back to categories', categories_path, class: 'btn btn-outline-dark' %>
+  <div class="container d-flex justify-content-between align-items-center flex-wrap mt-4">
+    <div>
+      <h1 class='fs-3'><%= @category.title.humanize %></h1>
+      <p class='fs-6 text-muted'><%= @category.description.humanize %></p>
+    </div>
+    <button class= 'btn btn-secondary'>
+      <i class="fas fa-plus"></i>
+      <%= link_to "New Task", new_category_task_path(@category), class: 'text-white' %>
+    </button>
   </div>
-</div>
-<div class="text-center">
-  <h1><%= @category.title %></h1>
-  <p><%= @category.description %></p>
-</div>
-<hr>
-<%= render 'tasks/form' %>
-<hr>
-<h1>Tasks</h1>
-<table class="table table-striped mb-4">
-  <thead>
-    <tr class="table-header">
-      <th>Name</th>
-      <th>Description</th>
-      <th>Due Date</th>
-      <th colspan="2">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @category.tasks.order(due_at: :asc).each do |task| %>
-      <% if task.persisted? %> <%# to only display tasks saved in the database %>
-        <tr>
-          <td><%= link_to "#{task.name}", [task.category, task] %></td>
-          <td><%= task.description %></td>
-          <td><%= task.due_at.strftime("%b %d, %Y") %></td>
-          <td><%= link_to "Edit", edit_category_task_path(task.category, task) %></td>
-          <td><%= link_to "Delete", category_task_path(task.category, task),
-            method: :delete,
-            data: { confirm: "Are you sure you want to delete #{task.name}?" } %></td>
+  <hr>
+  <div class='container'>
+    <h1 class='fs-5'>List of Tasks</h1>
+    <table class="table table-striped mb-4">
+      <thead>
+        <tr class="table-header">
+          <th>Name</th>
+          <th>Description</th>
+          <th>Due Date</th>
+          <th colspan="3" class="text-center">Actions</th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
+      <tbody>
+        <% @category.tasks.order(due_at: :asc).each do |task| %>
+          <% if task.persisted? %> <%# to only display tasks saved in the database %>
+            <tr>
+              <td><%= task.name.humanize %></td>
+              <td><%= truncate(task.description.humanize, length: 60) %></td>
+              <td><%= task.due_at.strftime("%b %d, %Y") %></td>
+              <td class='text-center'><%= link_to "", [task.category, task], class:'fas fa-eye text-primary' %></td>
+              <td class='text-center'><%= link_to "", edit_category_task_path(task.category, task), class:'far fa-edit text-warning' %></td>
+              <td class='text-center'><%= link_to "", category_task_path(task.category, task),
+              class:'far fa-trash-alt text-danger',
+              method: :delete,
+              data: { confirm: "Are you sure you want to delete #{task.name}?" } %>
+              </td>
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</section>
