--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,3 +1,4 @@
-<h1>Edit task</h1>
-<%= render 'form' %>
-<%= link_to 'Cancel', category_path(@category.id), class: 'btn btn-outline-dark mt-4' %>
+<div class='container-center'>
+  <%= render 'form' %>
+</div>
+<%= link_to 'Cancel', category_path(@category.id), class: 'back-btn btn btn-outline-dark mt-4' %>
