--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,4 @@
-<h1>New task</h1>
-<%= render 'form' %>
-<%= link_to 'Back', category_path(@category.id), class: 'btn btn-outline-dark mt-4' %>
+<div class='container-center'>
+  <%= render 'form' %>
+  <%= link_to 'Back', category_path(@category.id), class: 'btn btn-outline-dark mt-4' %>
+</div>
