--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,6 +4,7 @@
     <div>
       <h1 class='fs-3'><%= @category.title.humanize %></h1>
       <p class='fs-6 text-muted'><%= @category.description.humanize %></p>
+      <%= link_to 'Edit Category', edit_category_path(@category), class: 'text-warning'  %>
     </div>
     <button class= 'btn btn-secondary'>
       <i class="fas fa-plus"></i>
