--- a/app/javascript/stylesheets/_variables.scss
+++ b/app/javascript/stylesheets/_variables.scss
@@ -1,11 +1,11 @@
 // Color Variables
 $primary-color: #404456;
 $secondary-color: #c2c2c2;
-$warning-color: #dbaa23;
+$warning-color: #ebbb39;
 $text-color: #434343;
 $text-color-dark: #2F2F2F;
 $text-color-light: #878787;
-$body-color: #eeeeee;
+$body-color: #fffffe;
 $border-color: #ababab;
 $black: #000;
 $white: #fff;
